--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-icons": "^4.3.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "redux-saga": "^1.1.3",
+    "reselect": "^4.1.6"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
